# xtreemfs

./: .classpath  .cproject  .gitignore  .project  .travis.yml  AUTHORS  CHANGELOG  ChangeLog  KNOWN_ISSUES  LICENSE  LICENSE-3RD-PARTY  Makefile  README.XOS  README.md  SConstruct  Vagrantfile  cleanup.sh  index.html  merge.sh  rsuite.sh  ssuite.sh  xtfs_benchmark  xtreemfs.sln
client/: .cproject  .project  Doxyfile  Makefile  SConstruct  bootstrap.sh  configure.ac  eclipse-code-style.xml  generate_src_and_proj.bat  make.config  xtreemfs-client.sln
client/json-c-0.7/: Makefile.in  configure  json_object.c  json_object.h  json_object_private.h  json_tokener.c
client/man/man1/: xtfs_lsvol.1  xtfs_mkvol.1  xtfs_mount.1  xtfs_rmvol.1  xtfs_showmount.1  xtfs_stat.1  xtfs_umount.1
client/neon-0.27.2/: BUGS  ChangeLog  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h.in  config.hw  config.hw.in  configure  configure.in  neon.mak
client/neon-0.27.2/doc/: date.xml  manual.xml  using-neon.txt
client/neon-0.27.2/macros/: neon-test.m4  neon-xml-parser.m4  neon.m4
client/neon-0.27.2/po/: cs.gmo  cs.po  de.gmo  de.po  fr.gmo  fr.po  ja.gmo  ja.po  neon.pot  nn.gmo  nn.po  ru.gmo  ru.po  tr.gmo  tr.po  zh.gmo  zh.po
client/neon-0.27.2/src/: Makefile.in  ne_alloc.c  ne_alloc.h  ne_auth.c  ne_auth.h  ne_basic.c  ne_basic.h  ne_compress.c  ne_dates.c  ne_defs.h  ne_gnutls.c  ne_md5.c  ne_openssl.c  ne_private.h  ne_privssl.h  ne_props.c  ne_request.c  ne_request.h  ne_session.c  ne_session.h  ne_socket.c  ne_socket.h  ne_ssl.h  ne_string.c  ne_string.h  ne_uri.c  ne_uri.h  ne_xml.c
client/neon-0.27.2/test/: Makefile.in  auth.c  basic.c  compress.c  makekeys.sh  openssl.conf  props.c  request.c  run.sh  socket.c  ssl.c  string-tests.c  uri-tests.c  utils.c  utils.h  xml.c
client/proj/google-breakpad/: google-breakpad.vcproj  google-breakpad_custom.SConscript  google-breakpad_linux.SConscript
client/src/: Makefile  Makefile.am  acl.c  acl.h  bench_timer.c  bench_timer.h  creds.c  creds.h  dirservice.c  dirservice.h  file.c  file.h  file_inv.c  file_inv.h  fileobj.c  fileobj.h  fileops.h  filerw.c  filerw.h  fobj_cache.c  fobj_cache.h  hashtable.c  hashtable.h  kernel_substitutes.h  kernel_substitutes_arm.h  kernel_substitutes_ppc.h  kernel_substitutes_x86.h  lease.c  lease.h  list.h  lock_utils.c  lock_utils.h  logger.c  logger.h  main.c  metadata_cache.c  metadata_cache.h  mrc.h  mrc_channel.c  mrc_channel.h  (+59 more)
client/src/mods/: Makefile  raid0.c  raid5.c
client/tests/: Makefile
client/tests/acl/: Makefile  main.c
client/tests/bench_timer/: Makefile  main.c
client/tests/client-ng/: Makefile
client/tests/file/: Makefile
client/tests/hashtable/: Makefile  main.c
client/tests/json/: Makefile
client/tests/logger/: Makefile  main.c
client/tests/mrc/: Makefile
client/tests/osd/: Makefile
client/tests/pseudocomm/: Makefile  main.c
client/tests/radix-tree/: Makefile
client/tests/suite/: createFiles.sh  ddwrite.sh  marked_loop.sh
client/tests/thread_pool/: Makefile  main.c
client/tools/: Makefile  addrepl.c  lsvol.c  mkvol.c  mount.xtreemfs.c  rmvol.c  tool_utils.c  tool_utils.h  xtfs_stat.c
cpp/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  valgrind.supp  vivaldi-coordinates
cpp/cmake/: FindValgrind.cmake  UseSWIG.cmake
cpp/cpp_prj/nbproject/: Makefile-impl.mk  Package-Default.bash  project.xml
cpp/include/cbfs/: .gitignore  cbfs_adapter.h  cbfs_enumeration_context.h  cbfs_options.h
cpp/include/dokan/: dokan_adapter.h  dokan_operations.h  dokan_options.h
cpp/include/fuse/: cached_directory_entries.h  fuse_adapter.h  fuse_operations.h  fuse_options.h
cpp/include/json/: json-forwards.h  json.h
cpp/include/ld_preload/: clock.hpp  cycle.h  environment.h  misc.h  open_file_table.h  passthrough.h  path.h  preload.h  preload_options.h
cpp/include/libxtreemfs/: async_write_buffer.h  async_write_handler.h  client.h  client_implementation.h  container_uuid_iterator.h  execute_sync_request.h  file_handle.h  file_handle_implementation.h  file_info.h  file_key_distribution.h  hash_tree_ad.h  helper.h  interrupt.h  message_digest.h  metadata_cache.h  metadata_cache_entry.h  object_cache.h  object_encryptor.h  options.h  pbrpc_url.h  simple_uuid_iterator.h  stripe_translator.h  stripe_translator_erasure_code.h  stripe_translator_erasure_codes.h  stripe_translator_raid0.h  stripe_translator_reed_sol_van.h  system_user_mapping.h  system_user_mapping_unix.h  system_user_mapping_windows.h  typedefs.h  user_mapping.h  user_mapping_gridmap.h  user_mapping_gridmap_globus.h  user_mapping_gridmap_unicore.h  user_mapping_unix.h  uuid_cache.h  uuid_container.h  uuid_item.h  uuid_iterator.h  uuid_resolver.h  (+8 more)
cpp/include/lsfs.xtreemfs/: lsfs_options.h
cpp/include/mkfs.xtreemfs/: mkfs_options.h
cpp/include/rmfs.xtreemfs/: rmfs_options.h
cpp/include/rpc/: abstract_socket_channel.h  callback_interface.h  client.h  client_connection.h  client_request.h  client_request_callback_interface.h  grid_ssl_socket_channel.h  record_marker.h  ssl_options.h  ssl_socket_channel.h  sync_callback.h  tcp_socket_channel.h
cpp/include/swig/: base.i  java.i  jniutil.h  protobuf.i  std_list.i  xtreemfs.i
cpp/include/util/: annotations.h  error_log.h  logging.h  openssl_error.h  synchronized_queue.h  zipf_generator.h
cpp/include/xtfsutil/: xtfsutil_server.h
cpp/src/cbfs/: cbfs_adapter.cpp  cbfs_enumeration_context.cpp  cbfs_options.cpp  mount.xtreemfs.cpp
cpp/src/dokan/: dokan_adapter.cpp  dokan_operations.cpp  dokan_options.cpp  mount.xtreemfs.cpp
cpp/src/example_libxtreemfs/: example_libxtreemfs.cpp  example_libxtreemfs_erasurecodes.cpp  example_replication.cpp
cpp/src/fuse/: fuse_adapter.cpp  fuse_operations.cpp  fuse_options.cpp  mount.xtreemfs.cpp
cpp/src/ld_preload/: environment.cpp  functions.cpp  misc.cpp  open_file_table.cpp  passthrough.cpp  path.cpp  preload.cpp  preload_options.cpp
cpp/src/libxtreemfs/: async_write_buffer.cpp  async_write_handler.cpp  client.cpp  client_implementation.cpp  container_uuid_iterator.cpp  file_info.cpp  (+32 more)
(+5829 files in other folders)
